--- a/netlify.toml
+++ b/netlify.toml
@@ -35,14 +35,15 @@
 		Permissions-Policy = "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()"
 		Content-Security-Policy = """
 			default-src 'self';
+			script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com https://kit.fontawesome.com https://f.convertkit.com;
+			style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+			font-src 'self' https://fonts.gstatic.com https://kit.fontawesome.com;
 			img-src 'self' data: https:;
-			script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com;
-			style-src 'self' 'unsafe-inline';
 			connect-src 'self' https://www.google-analytics.com;
-			font-src 'self';
-			frame-ancestors 'none';
-			form-action 'self';
-			"""
+			form-action 'self' https://app.kit.com;
+			frame-src 'self';
+			object-src 'none';
+		"""
 
 # Cache control for static assets
 [[headers]]
