updated sytle sheet and toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -39,7 +39,7 @@
 			style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
 			font-src 'self' https://fonts.gstatic.com https://kit.fontawesome.com;
 			img-src 'self' data: https:;
-			connect-src 'self' https://www.google-analytics.com;
+			connect-src 'self' https://www.google-analytics.com https://app.kit.com;
 			form-action 'self' https://app.kit.com;
 			frame-src 'self';
 			object-src 'none';
