--- a/netlify.toml
+++ b/netlify.toml
@@ -35,15 +35,17 @@
 		Permissions-Policy = "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()"
 		Content-Security-Policy = """
 			default-src 'self';
-			script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com https://kit.fontawesome.com https://f.convertkit.com;
+			script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com https://kit.fontawesome.com https://f.convertkit.com https://ka-p.fontawesome.com;
 			style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-			font-src 'self' https://fonts.gstatic.com https://kit.fontawesome.com;
+			font-src 'self' https://fonts.gstatic.com https://kit.fontawesome.com https://ka-p.fontawesome.com;
 			img-src 'self' data: https:;
-			connect-src 'self' https://www.google-analytics.com https://app.kit.com;
-			form-action 'self' https://app.kit.com;
+			connect-src 'self' https://www.google-analytics.com https://app.kit.com https://ka-p.fontawesome.com https://app.convertkit.com https://f.convertkit.com;
+			form-action 'self' https://app.kit.com https://app.convertkit.com;
 			frame-src 'self';
 			object-src 'none';
 		"""
+		# Add cookie policy header
+		Set-Cookie = "cookieConsent=pending; SameSite=Lax; Secure"
 
 # Cache control for static assets
 [[headers]]
