--- a/netlify.toml
+++ b/netlify.toml
@@ -44,8 +44,15 @@
 			frame-src 'self';
 			object-src 'none';
 		"""
+		# Security headers
+		Cross-Origin-Embedder-Policy = "require-corp"
+		Cross-Origin-Opener-Policy = "same-origin"
+		Cross-Origin-Resource-Policy = "cross-origin"
 		# Add cookie policy header
 		Set-Cookie = "cookieConsent=pending; SameSite=Lax; Secure"
+		Access-Control-Allow-Origin = "*"
+		Access-Control-Allow-Methods = "GET, POST, OPTIONS"
+		Access-Control-Allow-Headers = "X-Requested-With, content-type, Authorization"
 
 # Cache control for static assets
 [[headers]]
