--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"markdown-it-anchor": "^8.6.7"
 	},
 	"dependencies": {
+		"@octokit/rest": "^20.1.2",
 		"@vercel/analytics": "^1.5.0",
 		"bulma": "^1.0.3",
 		"eleventy-plugin-svg-contents": "^0.7.0"
