--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,10 +2,10 @@ backend:
   name: github
   repo: hlnb/helenbee-site
   branch: main
-  base_url: "https://helenburgess.id.au"
-  auth_endpoint: "api/auth"
+  base_url: "https://www.helenburgess.id.au" # match deployed domain
+  auth_endpoint: "/api/auth" # leading slash for absolute path
 
-site_url: "https://helenburgess.id.au"
+site_url: "https://www.helenburgess.id.au"
 
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
