--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -117,9 +117,11 @@ _inputs:
     label: Theme
     comment: Thematic category
   keywords:
-    type: array
+    type: multiselect
     label: Keywords
-    comment: SEO keywords
+    comment: SEO keywords - add relevant keywords for search engines
+    options:
+      allow_create: true
   subtitle:
     type: text
     label: Subtitle
