--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -30,7 +30,7 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     path: "{{year}}/{{month}}/{{year}}-{{month}}-{{day}}-{{slug}}"
-    preview_path: "writings/{{slug}}"
+    preview_path: "writings/{{year}}/{{month}}/{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
       preview: false
     fields:
