--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -28,7 +28,7 @@ collections:
     label_singular: Writing
     folder: src/writings
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"
     path: "{{year}}/{{month}}/{{year}}-{{month}}-{{day}}-{{slug}}"
     preview_path: "writings/{{year}}/{{month}}/{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
